--- a/style.css
+++ b/style.css
@@ -744,7 +744,7 @@ a.reqe-button {
 }
 
 .csslider>ul>li:nth-child(2) {
-    background:linear-gradient(rgba(0,0,0,0.5),#0096), url(../taxii.jpg) no-repeat top;
+    background:linear-gradient(rgba(0,0,0,0.5),#0096), url(taxii.jpg) no-repeat top;
     background-size: cover;
 }
 
@@ -925,7 +925,7 @@ footer {
 
 /* about */
 .about {
-    background: url(../images/hh.jpg) no-repeat center;
+    background: url(hh.jpg) no-repeat center;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -1020,7 +1020,7 @@ h5.card-title.mt-3 {
 
 /* testimonials */
 .testi-bg {
-    background: url(../images/oo.jpg) no-repeat top;
+    background: url(oo.jpg) no-repeat top;
     background-size: cover;
     min-height: 500px;
 }
@@ -1108,7 +1108,7 @@ a.btn.button-style-2:hover {
 
 /* middle one */
 .middle-w3l {
-    background: url(../images/mmm.jpg) no-repeat center;
+    background: url(mmm.jpg) no-repeat center;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -1133,7 +1133,7 @@ a.btn.button-style-2:hover {
 
 /* middle two */
 .agile-wthree-works {
-    background: url(../images/pp.jpg) no-repeat left;
+    background: url(pp.jpg) no-repeat left;
     background-size: contain;
     -webkit-background-size: contain;
     -moz-background-size: contain;
@@ -1151,7 +1151,7 @@ a.btn.button-style-2:hover {
 
 /* services */
 .services {
-    background: url(../images/Hymetro.jpg) no-repeat center;
+    background: url(Hymetro.jpg) no-repeat center;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -1207,7 +1207,7 @@ a.btn.button-style-2:hover {
 
 /* inner pages */
 .banner_w3lspvt-2 {
-    background: url(../images/gmetro.jpg) no-repeat center;
+    background: url(gmetro.jpg) no-repeat center;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -1385,7 +1385,7 @@ ul.author li span {
 
 /* stats */
 .middlesection-w3pvt {
-    background: url(../images/jj.jpg) no-repeat right;
+    background: url(jj.jpg) no-repeat right;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
